# src/.swagger-output.json
@@ -552,6 +552,69 @@
         }
       }
     },
+    "/product-groups/findAll": {
+      "get": {
+        "tags": [
+          "Product Group"
+        ],
+        "description": "Get all product group.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "get all product group data ",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ProductGroup"
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ProductGroup"
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Some error occurred while retrieving product groups..."
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/product-groups/{id}": {
       "get": {
         "tags": [
@@ -1332,6 +1395,15 @@
           "product_group_id": {
             "type": "string",
             "example": "req.body.product_group_id"
+          },
+          "product_group": {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string",
+                "example": "-"
+              }
+            }
           }
         },
         "required": [
